# pi-agent-rs

./: Cargo.toml  README.md
crates/pi-agent-ai/: Cargo.toml
crates/pi-agent-ai/src/: env_keys.rs  header_utils.rs  lib.rs  models.rs  models_generated.rs  register.rs  registry.rs  simple_options.rs  sse.rs  stream.rs
crates/pi-agent-ai/src/oauth/: anthropic.rs  github_copilot.rs  google_antigravity.rs  google_gemini_cli.rs  mod.rs  openai_codex.rs  pkce.rs  types.rs
crates/pi-agent-ai/src/providers/: anthropic.rs  azure_openai_responses.rs  bedrock.rs  github_copilot_headers.rs  google.rs  google_gemini_cli.rs  google_shared.rs  google_vertex.rs  mod.rs  openai.rs  openai_codex_responses.rs  openai_responses.rs  openai_responses_shared.rs
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: agent.rs  agent_loop.rs  agent_types.rs  event_stream.rs  json_parse.rs  lib.rs  overflow.rs  proxy.rs  sanitize.rs  transform.rs  types.rs  validation.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: error.rs  export_html.rs  keybindings.rs  lib.rs  main.rs  retry.rs  slash_commands.rs
crates/pi-coding-agent/src/agent_session/: events.rs  mod.rs  sdk.rs  session.rs
crates/pi-coding-agent/src/auth/: credentials.rs  mod.rs  storage.rs
crates/pi-coding-agent/src/cli/: args.rs
crates/pi-coding-agent/src/compaction/: branch_summary.rs  compaction.rs  mod.rs
crates/pi-coding-agent/src/config/: paths.rs
crates/pi-coding-agent/src/extensions/: loader.rs  mod.rs  runner.rs  runtime.rs  types.rs  wrapper.rs
crates/pi-coding-agent/src/messages/: convert.rs  types.rs
crates/pi-coding-agent/src/model/: registry.rs  resolver.rs
crates/pi-coding-agent/src/modes/: interactive_mode.rs  mod.rs  print_mode.rs  rpc_mode.rs
crates/pi-coding-agent/src/resources/: frontmatter.rs  loader.rs  mod.rs  package_manager.rs  patterns.rs  prompts.rs  skills.rs  source_identity.rs  themes.rs
crates/pi-coding-agent/src/session/: context.rs  manager.rs  mod.rs  tree.rs  types.rs
crates/pi-coding-agent/src/settings/: manager.rs  mod.rs  types.rs
crates/pi-coding-agent/src/system_prompt/: builder.rs
crates/pi-coding-agent/src/tools/: bash.rs  edit.rs  edit_diff.rs  find.rs  grep.rs  ls.rs  mod.rs  path_utils.rs  read.rs  truncate.rs  write.rs
