[workspace]
resolver = "2"
members = ["crates/pi-agent-core", "crates/pi-agent-ai", "crates/pi-coding-agent"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
tracing = "0.1"
regex = "1"
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2"
pi-agent-core = { path = "crates/pi-agent-core" }
pi-agent-ai = { path = "crates/pi-agent-ai" }
pi-coding-agent = { path = "crates/pi-coding-agent" }
