[package]
name = "pi-agent-ai"
version.workspace = true
edition.workspace = true

[dependencies]
pi-agent-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
uuid = { version = "1", features = ["v4"] }
getrandom = "0.3"
