[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true

[dependencies]
pi-agent-core = { path = "../pi-agent-core" }
pi-agent-ai = { path = "../pi-agent-ai" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
glob = "0.3"
walkdir = "2"
regex = { workspace = true }
similar = "2"
ignore = "0.4"
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tracing = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
